<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:textColor="#00FFFFFF"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textColor="#00FFFFFF"
        android:textSize="38sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="2.5in"
        android:layout_height="4.4in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/picmenu" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="235dp"
        android:layout_height="100dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="388dp"
        android:text="@string/startBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#00FFFFFF" />

    <Button
        android:id="@+id/instBtn"
        android:layout_width="317dp"
        android:layout_height="127dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="488dp"
        android:text="@string/instructionBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#00FFFFFF" />


</androidx.constraintlayout.widget.ConstraintLayout>