<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/levelImage"
        android:layout_width="2.5in"
        android:layout_height="4.4in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/picready" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="222dp"
        android:layout_height="107dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="420dp"
        android:text="@string/startGameBtn"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/catButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catBtn"
        android:textColor="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="460dp"
        android:textColor="#00FFFFFF"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hitboxBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="#22FF0000"
        android:text="@string/hitboxBtn"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGameButton" />

    <TextView
        android:id="@+id/hitboxWon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hitboxWonBG"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/chronometer"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startTablet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:background="#22FF0000"
        android:text="@string/startTablet"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/hitboxBtn"
        app:layout_constraintTop_toBottomOf="@+id/startGameButton" />


</androidx.constraintlayout.widget.ConstraintLayout>